--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:28:59</td>   <td>-254758</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:17</td>   <td>3689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:17</td>   <td>3689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/11/13 12:33:17</td>   <td>3682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSourceAndOrg()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">createContactWithLeadSourceAndOrg</td> 
-  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:17</td>   <td>3689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:17</td>   <td>3689</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/11/13 12:33:08</td>   <td>-5878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSource()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">createContactWithLeadSource</td> 
-  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:28:59</td>   <td>-253977</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:23</td>   <td>9676</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/11/13 12:31:09</td>   <td>-124540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.CreateContactTest()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">CreateContactTest</td> 
-  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:25</td>   <td>11633</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="adf0b7">  <td>22/11/13 12:33:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1042786867</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/11/13 12:32:56</td>   <td>-17891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactDemo()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]">createContactDemo</td> 
-  <td>main@1042786867</td>   <td></td> </tr>
+<tr bgcolor="8a8276">  <td>22/11/25 12:06:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactDemo()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]">createContactDemo</td> 
+  <td>main@1917025677</td>   <td></td> </tr>
+<tr bgcolor="8a8276">  <td>22/11/25 12:06:36</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSource()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]">createContactWithLeadSource</td> 
+  <td>main@1917025677</td>   <td></td> </tr>
+<tr bgcolor="8a8276">  <td>22/11/25 12:06:36</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSourceAndOrg()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]">createContactWithLeadSourceAndOrg</td> 
+  <td>main@1917025677</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>22/11/25 12:06:36</td>   <td>75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithOrganizationsTest.CreateContactWithOrganizationsTest()[pri:0, instance:vtiger.ContactTest.CreateContactWithOrganizationsTest@169e6180]">CreateContactWithOrganizationsTest</td> 
+  <td>main@1917025677</td>   <td></td> </tr>
 </table>
