--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7bace">  <td>22/11/18 10:49:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadDataFromCmdLine.readData()[pri:0, instance:vtiger.Practice.ReadDataFromCmdLine@306f16f3]">readData</td> 
-  <td>main@1623009085</td>   <td></td> </tr>
+<tr bgcolor="bb7c74">  <td>22/11/28 11:41:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadDataFromCmdLineTest.readDatatest()[pri:0, instance:vtiger.Practice.ReadDataFromCmdLineTest@1a4013]">readDatatest</td> 
+  <td>main@1333810223</td>   <td></td> </tr>
 </table>
