--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>vtiger.ContactTest.CreateContactWithOrganizationsTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateContactWithOrganizationsTest</td>
+<td>regressionSuite </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>vtiger.ContactTest.CreateContactTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -31,32 +54,12 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>bcConfig</td>
-<td>smokeSuite regressionSuite </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>bmConfig</td>
-<td>smokeSuite regressionSuite </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>amConfig</td>
-<td>smokeSuite regressionSuite </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>acConfig</td>
-<td>smokeSuite regressionSuite </td>
 </tr>
 </table>
