--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regressionSuite</td><td>CreateContactTest.createContactDemo()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]<br/></td></tr>
-<tr><td>smokeSuite</td><td>CreateContactTest.CreateContactTest()[pri:0, instance:vtiger.ContactTest.CreateContactTest@37d4349f]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regressionSuite</td><td>CreateContactTest.createContactDemo()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]<br/>CreateContactWithOrganizationsTest.CreateContactWithOrganizationsTest()[pri:0, instance:vtiger.ContactTest.CreateContactWithOrganizationsTest@169e6180]<br/></td></tr>
 </table>
