--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">124</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">267,515</td><td></td><td>smokeSuite</td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">vtiger.Practice.ReadDataFromCmdLineTest</td><td><a href="#m0">readDatatest</a></td><td rowspan="1">1669615894465</td><td rowspan="1">19</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">vtiger.ContactTest.CreateContactTest</td><td><a href="#m0">createContactDemo</a></td><td rowspan="1">1669619245348</td><td rowspan="1">63</td></tr><tr class="passedeven"><td><a href="#m1">createContactWithLeadSource</a></td><td rowspan="1">1669619245472</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">createContactWithLeadSourceAndOrg</a></td><td rowspan="1">1669619245477</td><td rowspan="1">1</td></tr><tr class="passedodd"><td rowspan="1">vtiger.ContactTest.CreateContactWithOrganizationsTest</td><td><a href="#m3">CreateContactWithOrganizationsTest</a></td><td rowspan="1">1669619245484</td><td rowspan="1">265869</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">vtiger.Practice.ReadDataFromCmdLineTest#readDatatest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">vtiger.ContactTest.CreateContactTest#createContactDemo</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">demo test</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">vtiger.ContactTest.CreateContactTest#createContactWithLeadSource</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Lead source</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">vtiger.ContactTest.CreateContactTest#createContactWithLeadSourceAndOrg</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Lead source with org</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">vtiger.ContactTest.CreateContactWithOrganizationsTest#CreateContactWithOrganizationsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
