--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8a8276">  <td>22/11/25 12:06:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactDemo()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]">createContactDemo</td> 
-  <td>main@1917025677</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/25 12:06:36</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSource()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]">createContactWithLeadSource</td> 
-  <td>main@1917025677</td>   <td></td> </tr>
-<tr bgcolor="8a8276">  <td>22/11/25 12:06:36</td>   <td>65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSourceAndOrg()[pri:0, instance:vtiger.ContactTest.CreateContactTest@25084a1e]">createContactWithLeadSourceAndOrg</td> 
-  <td>main@1917025677</td>   <td></td> </tr>
-<tr bgcolor="d8a07f">  <td>22/11/25 12:06:36</td>   <td>75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithOrganizationsTest.CreateContactWithOrganizationsTest()[pri:0, instance:vtiger.ContactTest.CreateContactWithOrganizationsTest@169e6180]">CreateContactWithOrganizationsTest</td> 
-  <td>main@1917025677</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>22/11/28 12:37:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactDemo()[pri:0, instance:vtiger.ContactTest.CreateContactTest@3bf9ce3e]">createContactDemo</td> 
+  <td>main@108449608</td>   <td></td> </tr>
+<tr bgcolor="66f1f5">  <td>22/11/28 12:37:25</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithOrganizationsTest.CreateContactWithOrganizationsTest()[pri:0, instance:vtiger.ContactTest.CreateContactWithOrganizationsTest@7205765b]">CreateContactWithOrganizationsTest</td> 
+  <td>main@108449608</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>22/11/28 12:37:25</td>   <td>125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSource()[pri:0, instance:vtiger.ContactTest.CreateContactTest@3bf9ce3e]">createContactWithLeadSource</td> 
+  <td>main@108449608</td>   <td></td> </tr>
+<tr bgcolor="d8a07f">  <td>22/11/28 12:37:25</td>   <td>130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactTest.createContactWithLeadSourceAndOrg()[pri:0, instance:vtiger.ContactTest.CreateContactTest@3bf9ce3e]">createContactWithLeadSourceAndOrg</td> 
+  <td>main@108449608</td>   <td></td> </tr>
 </table>
